discussion/kv_engine/162993/162993_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47318: Add PassiveStream always buffered mode

Add a DcpControl that can force consumer to always process
messages on the AUXIO task.

Change-Id: I7ead4aab778d881930049041986552462ad16b00

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-05 11:42:22.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-05 11:44:26.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40748/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15592/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15592/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23025/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23025/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2758/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2758/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2793/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13886/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14738/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14738/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15008/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15008/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13139/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16: error: member reference base type "double (double) throw()" is not a structure or union [clang-diagnostic-error]
            log->warn("setting flow control buffer size:", result);
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13139/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16:
error: member reference base type "double (double) throw()" is not a structure or union [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13139/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11926/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
